--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div>
 
         <a  class="btn" href="#"><span>Button</span></a>
+        <a  class="btn" href="#"><span>Button</span></a>
         
     </div>
 
